manifests/workloads/keycloak/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-danmanners-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: keycloak.danmanners.com
    external-dns.alpha.kubernetes.io/ttl: "300"
  labels:
    app.kubernetes.io/instance: keycloak
spec:
  type: ExternalName
  externalName: danmanners.com
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: keycloak
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`keycloak.danmanners.com`)
      kind: Rule
      services:
        - name: keycloak
          port: 8080
      middlewares:
        - name: http-https-redirectscheme
          namespace: kube-system
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`keycloak.danmanners.com`)
      kind: Rule
      services:
        - name: keycloak
          port: 8080
  tls:
    secretName: keycloak-cert
